--- a/hello.html
+++ b/hello.html
@@ -16,8 +16,15 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+		<!-- derscription -->
 		<div>
+	<h1>Ma description</h1>	
 		<p>Moi je suis un cour sur Git</p>
+		</div>
+				<!-- derscription -->
+		<div>
+	<h1>Récompense</h1>	
+		<p>En construction</p>
 		</div>
 		
 	</body>
