ajout d'un gist

--- a/hello.html
+++ b/hello.html
@@ -27,5 +27,9 @@
 		<p>En construction</p>
 		</div>
 		
+			<h1>Mon Gist</h1>	
+		<p><script src="https://gist.github.com/CFAmeriques/6eb82e2aedbc87e4b63b44dc3a13c0d4.js"></script></p>
+		</div>
+		
 	</body>
 </html>
