--- a/hello.html
+++ b/hello.html
@@ -24,7 +24,7 @@
 				<!-- derscription -->
 		<div>
 	<h1>Récompense</h1>	
-		<p>En construction</p>
+		<p><img src="images/medal_bronze.png"></p>
 		</div>
 		
 			<h1>Mon Gist</h1>	
